Salesforce/ISW Telegram Bot/force-app/main/default/objects/Professor__c/Professor__c.object-meta.xml
<CustomObject>
    <label>Professor</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Professors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>