Salesforce/ISW Telegram Bot/force-app/main/default/objects/Professor__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Professors</relationshipLabel>
    <relationshipName>Professors</relationshipName>
    <type>Lookup</type>
</CustomField>