Salesforce/ISW Telegram Bot/force-app/main/default/objects/Professor__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>