Salesforce/ISW Telegram Bot/force-app/main/default/objects/Professor__c/fields/Manage__c.field-meta.xml
<CustomField>
    <fullName>Manage__c</fullName>
    <label>Manage</label>
    <referenceTo>Manage__c</referenceTo>
    <relationshipLabel>Professors</relationshipLabel>
    <relationshipName>Professors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>