Salesforce/ISW Telegram Bot/force-app/main/default/objects/Professor__c/fields/Personal_Website__c.field-meta.xml
<CustomField>
    <fullName>Personal_Website__c</fullName>
    <label>Personal Website</label>
    <type>Url</type>
</CustomField>