Salesforce/ISW Telegram Bot/force-app/main/default/objects/Professor__c/fields/Telegram_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Telegram_User_ID__c</fullName>
    <externalId>true</externalId>
    <label>Telegram User ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>